syntax = "proto3";

package auth;

import 'common.proto';

service AuthService {
  rpc login (LoginRequest) returns (LoginResponse);
  rpc register (RegisterRequest) returns (RegisterResponse);
  rpc validateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc refreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
};

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  optional int32 pbx_extension = 4;
}

message RegisterResponse {
  optional string access_token = 1;
  optional string refresh_token = 2;
  optional common.User user = 3;
  optional common.Error error = 4;
}

message LoginResponse {
  optional string access_token = 1;
  optional string refresh_token = 2;
  optional common.User user = 3;
  optional common.Error error = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  optional common.User user = 2;
  optional common.Error error = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  optional string access_token = 1;
  optional string refresh_token = 2;
  optional common.User user = 3;
  optional common.Error error = 4;
}

// npx protoc --ts_proto_out=./libs/interfaces/src/ --proto_path=./libs/proto/src/ ./libs/proto/src/*.proto --ts_proto_opt=nestJs=true
